# C-

./: .gitignore  .gitmodules  6174.cpp  Adrian.c  ArrayMaker.cpp  Ato.cpp  Att.cpp  AutoZoom.cpp  BatteryLock.cpp  BatteryPower.cpp  BatteryWarning.cpp  Buble.cpp  Button.cpp  CLASE0.cpp  CMakeLists.txt  CPP Guide.cpp  Char Type.cpp  Circle.cpp  Cl.cpp  Classes.cpp  Cleaner.cpp  ConsoleColors.cpp  CosinesLaw.cpp  Craps.cpp  Crash.cpp  DataSyncUSBtoCOMPUTER.cpp  Donut.c  El Profe.cpp  EncoderM.cpp  Executor.cpp  Fibonacci.cpp  FileMaker.cpp  FinalMean.cpp  Functions.cpp  GetCursor.cpp  Giovanni.cpp  Hello.cpp  HelloWorld.cpp  INFORMATION.txt  Insertion.cpp  (+55 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
ArraySortingMethods/Bubble/: CMakeLists.txt  main.cpp
ArraySortingMethods/Insertion/: CMakeLists.txt  main.cpp
AutoZoom/: AutoZoom.cpp  data.txt
Battery Warning/: BatteryWarning.cpp
BatteryWarning/: CMakeLists.txt  MessageBox.vbs  info.txt  main.cpp
BatteryWarning/CheckBatteryLevel/: CMakeLists.txt  main.cpp  test.cpp
BatteryWarning/ToastNotification/: main.py
CLion/: CMakeLists.txt  main.cpp
CReminders/: CMakeLists.txt  commands.cpp  header.h  main.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp
CReminders/ToastNotification/: main.py  test.py
CaesarCipher/: CMakeLists.txt  main.cpp
ClassSuppress/: CMakeLists.txt  main.cpp
Click/: CMakeLists.txt  main.cpp
ConsoleColors/: CMakeLists.txt  main.cpp
CosinesLaw/: CMakeLists.txt  main.cpp
Crapsgame/: CMakeLists.txt  main.cpp
DecToBin_1/: CMakeLists.txt  main.cpp
DecToBin_2/: CMakeLists.txt  main.cpp
Donut/: CMakeLists.txt  main.cpp
EvenNumberSwap/: CMakeLists.txt  main.cpp
Fibonacci/: CMakeLists.txt
FinalGarde/: CMakeLists.txt  main.cpp
FishingCardGame/: CMakeLists.txt  main.cpp
GetCursorPosition/: CMakeLists.txt  main.cpp  test.cpp
GuessNumber/: CMakeLists.txt  main.cpp
HammingCode(15,11)/: CMakeLists.txt  main.cpp
HelpTest/: CMakeLists.txt  Test.cpp  Test.h  main.cpp  t.md  test.c
KaprekarConstant/: CMakeLists.txt  main.cpp
Keystrokes/: CMakeLists.txt  main.cpp
LittleBigMouseStart/: CMakeLists.txt  main.cpp  start.cpp
Macrokeyboard/: CMakeLists.txt  Serial.cpp  SerialClass.h  main.cpp
Marco/: CMakeLists.txt  main.cpp
Matrices/: CMakeLists.txt  main.cpp
MatrixTranspose/: CMakeLists.txt  main.cpp
MotorProperties/: CMakeLists.txt  main.cpp
Notes/: CMakeLists.txt  main.cpp
NumerosPrimos/: CMakeLists.txt  main.cpp
PID/: CMakeLists.txt  PID.cpp  PID.h  main.cpp
PhotoMistry/: PhotoMistry.cbp  PhotoMistry.depend  PhotoMistry.layout  Photomistry.cpp  main.cpp
Pikachu/: CMakeLists.txt  main.cpp
Project/: Project.cbp  Project.layout
Radian_Degrees/: CMakeLists.txt  main.cpp
Reminders/: CMakeLists.txt  main.cpp  test.cpp
SMP/: CMakeLists.txt  main.cpp  test.cpp
SSH_R/: CMakeLists.txt  main.cpp
SilentStart/: CMakeLists.txt  deactivateSilentStart.cpp  main.cpp  test.cpp
Temp/: CMakeLists.txt  main.cpp
ZoomKill/: CMakeLists.txt  KILLzoomKiller.cpp  MessageBox.vbs  ZoomKill.cpp  t.cpp
compileTest/: CMakeLists.txt  main.cpp  useful.cpp  useful.h
setAlarm/: CMakeLists.txt  main.cpp  test.cpp
sourceFiles/: CMakeLists.txt  incr.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test.c
tests/: CMakeLists.txt  main.cpp
