cmake_minimum_required(VERSION 3.21)
project(C__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(C__
        CLion/main.cpp
        CLion/Test.cpp
        PhotoMistry/main.cpp
        6174.cpp
        Adrian.c
        ArrayMaker.cpp
        Ato.cpp
        Att.cpp
        AutoZoom.cpp
        BatteryLock.cpp
        BatteryPower.cpp
        BatteryWarning.cpp
        Buble.cpp
        Button.cpp
        "Char Type.cpp"
        chart.cpp
        Circle.cpp
        Cl.cpp
        Classes.cpp
        Cleaner.cpp
        CosinesLaw.cpp
        "CPP Guide.cpp"
        Craps.cpp
        Crash.cpp
        DataSyncUSBtoCOMPUTER.cpp
        Donut.c
        Encoder.cpp
        EncoderM.cpp
        Executor.cpp
        Fibonacci.cpp
        FileMaker.cpp
        FinalMean.cpp
        Fishing.cpp
        Functions.cpp
        GetCursor.cpp
        Hello.cpp
        Insertion.cpp
        Jordan.cpp
        KeyBoard.cpp
        Lenght.cpp
        Log.cpp
        "Magic Number.cpp"
        Marco.cpp
        Matrices.cpp
        MotorProperties.cpp
        MyTest.cpp
        MyTest.h
        Photomistry.cpp
        "Physics Linear S.cpp"
        Primos.cpp
        ProgramMaker.cpp
        Radials.cpp
        Recursador.cpp
        ReCursador2.cpp
        SetCursor.cpp
        Setup.cpp
        StackMatriz.cpp
        "String Compare.cpp"
        "String Copy.cpp"
        "String Rev.cpp"
        Subsets.cpp
        Test.cpp
        Test2.cpp
        Test3.cpp
        Test4.cpp
        Test5.cpp
        test6.cpp
        Tradi.cpp
        TurtleParadox.cpp
        xss.cpp
        ZoomAttend.cpp)
